Resolves fdo#43277  Send Legacy Report "E-Mail as ..."=>error message

Cherry-picked from 501ebd0f7c867c4df5ba84fd8b6b1a197aeeea92

Change-Id: Iaaadd4fd3015214c007a86d1a83f837aa0d2bdb6
Reviewed-on: https://gerrit.libreoffice.org/9998
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
Tested-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>